@@ -47,19 +47,19 @@ tagline.usage=USAGE: site tagline <tagline>
 take.usage=USAGE: site take <user> <bytes>
 user.usage=USAGE: site user <user>
 
-user=Username: ${username,-20} Created: ${org.drftpd.command.UserManagment@created}\n\
-Comment: ${org.drftpd.commands.UserManagment@comment,21} Last seen: ${lastseen}\n\
-Total logins: ${totallogins,-16} Idle time: ${idletime}\n\
+user=Username: ${username,-20} Created: ${org.drftpd.commands.UserManagment@created}\n\
+Comment: ${org.drftpd.commands.UserManagment@comment,-21} Last seen: ${org.drftpd.commands.UserManagment@lastseen}\n\
+Total logins: ${org.drftpd.commands.UserManagment@totallogins,-16} Idle time: ${idletime}\n\
 Ratio: ${org.drftpd.commands.UserManagment@ratio,-23} Credits: ${credits}\n\
-Max logins: ${maxlogins,-18} From same IP: ${maxloginsip}\n\
-Max sim uploads: ${maxsimup,-13} Max sim downloads: ${maxsimdn}\n\
-Group / Leech slots: ${groupslots} ${groupleechslots}\n\
+Max logins: ${org.drftpd.commands.UserManagment@maxlogins,-18} From same IP: ${org.drftpd.commands.UserManagment@maxloginsip}\n\
+Max sim uploads: ${org.drftpd.commands.UserManagment@maxsimup,-13} Max sim downloads: ${org.drftpd.commands.UserManagment@maxsimdn}\n\
+Group / Leech slots: ${org.drftpd.commands.UserManagment@groupslots} ${org.drftpd.commands.UserManagment@leechslots}\n\
 Total uploaded: ${uploaded,-14} Total downloaded: ${downloaded}\n\
-Times nuked: ${org.drftpd.plugins.Nuked@nuked,-17} Bytes nuked: ${org.drftpd.plugins.Nuked@nukedBytes}\n\
+Times nuked: ${org.drftpd.commands.Nuke@nuked,-17} Bytes nuked: ${org.drftpd.commands.Nuke@nukedBytes}\n\
 Primary group: ${group}\n\
 Extra groups: ${groups}\n\
 IP masks: ${ipmasks}\n\
-Weekly Allotment: ${wkly_allotment}\n\
+Weekly Allotment: ${org.drftpd.commands.UserManagment@wkly_allotment}\n\
 IRC Ident: ${org.drftpd.commands.UserManagment@ircident,-23}
 
 user.username=Username: ${username,-20} Created: ${created}
